today's snap answer, complete

--- a/7_25snap.html
+++ b/7_25snap.html
@@ -17,6 +17,6 @@
 		<li>Hot fix branches: These are tiny branches that may be created directly from the master branch, with the sole purpose of applying immediate, necessary fixes to the code such as security patches. Use them sparingly or ideally not at all.</li>
 		</ul>
 		</p>
-		<p>Work on a ticket will begin by forking a feature branch off the development branch. Once the work on the feature is complete, that branch will be merged back into the development branch, where it will be intergrated with the current working code. After that happens, </p>
+		<p>Work on a ticket will begin by forking a feature branch off the development branch. Once the work on the feature is complete, that branch will be merged back into the development branch, where it will be integrated with the current working code. After that happens, it will be added to the release and master branches.</p>
 	</div>
 </body>
